fix spacing stock graph

--- a/app/assets/stylesheets/api/stocks.scss
+++ b/app/assets/stylesheets/api/stocks.scss
@@ -310,7 +310,7 @@
 .stock-show-left {
   width: 60%;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
 
@@ -326,6 +326,7 @@
     flex-direction: column;
     width: 40em;
     height: 28em;
+    margin-left: 2em;
 }
 
 .stock-chart-container {
